# cgLibraries

./: .clang-format  .clang-format.bak  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  default.profraw  docker-compose.debug.yml  generate_coverage.sh  rebuild_package.sh  set_cxx_compiler.sh
cgl/: CMakeLists.txt
cgl/inc/app/: app.hpp  app_runner.hpp  iapp.hpp
cgl/inc/common/: shapes.hpp
cgl/inc/compilers/: compilers.hpp
cgl/inc/error/: cgl_error.hpp  error_types.hpp
cgl/inc/event/: ievent.hpp  ievent_listener.hpp  sdl_event_listener.hpp
cgl/inc/window/: iwindow.hpp  sdl_window.hpp
cgl/res/config/: default_config  sprite_terra
cgl/src/app/: app.cpp
cgl/src/compilers/: compilers.cpp
cgl/src/error/: cgl_error.cpp
cgl/src/event/: sdl_event_listener.cpp
cgl/src/window/: sdl_window.cpp
cgl/tests/mocks/: sdl2_stubs.cpp
cgl/tests/src/: app_tests.cpp  event_tests.cpp  main.cpp
cmake/: build_types.cmake  lcov_coverage.cmake  llvm_coverage.cmake  versions.cmake
sandbox/: CMakeLists.txt  README.md
sandbox/inc/: data.hpp  gst_helper.hpp  sandbox_app.hpp
sandbox/src/: data.cpp  gst_helper.cpp  main.cpp  sandbox_app.cpp
toolchains/: buildTypes.cmake  cglBuild.cmake  cglTests.cmake  lcovCoverage.cmake  linuxGCC.cmake  llvmCoverage.cmake  minGWGCC.cmake  versions.cmake
vendors/: CMakeLists.txt
